--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "__string": "c",
         "string": "c",
         "string_view": "c",
-        "type_traits": "c"
+        "type_traits": "c",
+        "iterator": "c"
     }
 }
