--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "string": "c",
         "string_view": "c",
         "type_traits": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "bitset": "c"
     }
 }
