add julia set and start check argv

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "string_view": "c",
         "type_traits": "c",
         "iterator": "c",
-        "bitset": "c"
+        "bitset": "c",
+        "complex": "c"
     }
 }
