fix makefiles logic and complet  check flat args func

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,15 @@
         "iterator": "c",
         "bitset": "c",
         "complex": "c",
-        "ft_printf.h": "c"
+        "ft_printf.h": "c",
+        "stdarg.h": "c",
+        "stddef.h": "c",
+        "stdlib.h": "c",
+        "unistd.h": "c",
+        "stdint.h": "c",
+        "fcntl.h": "c",
+        "stdio.h": "c",
+        "limits.h": "c",
+        "sstream": "c"
     }
 }
